--- a/app/src/main/res/layout/activity_to_do_list.xml
+++ b/app/src/main/res/layout/activity_to_do_list.xml
@@ -17,23 +17,28 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <EditText
+                android:id="@+id/inputText"
+                android:layout_width="286dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="text"
+                android:text="할 일을 입력해주세요" />
 
-                <Button
-                    android:id="@+id/btnPlus"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_marginStart="320dp"
-                    android:layout_marginTop="650dp"
-                    android:background="@drawable/shape_for_circle_button"
-                    android:backgroundTint="#B3E0FF"
-                    android:text="+"
-                    android:textSize="25sp" />
+            <Button
+                android:id="@+id/btnAdd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="ADD" />
 
-            </FrameLayout>
         </LinearLayout>
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </FrameLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
